src/tests/cases/snapshots/ui__noop_when_pressing_esc_at_base_folder-4.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[3]"
---
                                                                                                                                                                                              
                                                                  /tmp/bandwhich_tests/noop wh n_pressing_esc_at base_folder                                                                  
                                                                                                                                                                                              
                                                                                                                              ┬                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                    => file2 4.1K (33%) <=                                                    │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
├─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                    subfolder1/ 4.1K (33%)                     
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                       file3 4.1K (33%)                                                       │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              ┴                                                               

