src/tests/cases/snapshots/ui__noop_when_pressing_esc_at_base_folder-5.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[4]"
---
                                                                                                                                                                                              
            /tmp/bandwhich_tests/noop wh n_pressing_esc_at base_folder (12.3K)                                                                                                                
                                                                                                                                                                                              
                                                                                                                              ┬                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                             file2                                                            │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                          4.1K (33%)                                                          │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                 subfolder1/ (+1 descendants)                  
                                                                                                                              │                                                               
├─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                                               
                                                                                                                              │                          4.1K (33%)                           
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                             file3                                                            │                                                               
                                                                                                                              │                                                               
                                                          4.1K (33%)                                                          │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              ┴                                                               
                                                                                                                                                                                              

