src/tests/cases/snapshots/ui__noop_when_pressing_esc_at_base_folder-6.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[5]"
---
┌────────────────────────────────────────────────────────────────────────────────┐┌                                                                                                           
│    Base: /tmp/bandwhich_tests/noop_when_pressing_esc_at_base_folder (12.3K)    ││        /tmp/bandwhich_tests/noop_when_pressing_esc_at_base_folder (12.3K)                                 
└────────────────────────────────────────────────────────────────────────────────┘└                                                                                                           
                                                                                                                              ┬                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                             file2                                                            │                                                               
                                                                                                                              │                                                               
                                                          4.1K (33%)                                                          │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                 subfolder1/ (+1 descendants)                  
├─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                                               
                                                                                                                              │                          4.1K (33%)                           
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                             file3                                                            │                                                               
                                                                                                                              │                                                               
                                                          4.1K (33%)                                                          │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              │                                                               
                                                                                                                              ┴                                                               
                                                                                                                                                                                              
                                                                                                                                                                                              

